more text and pictures

--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -44,8 +44,8 @@
 		
 		\begin{tabbing}
 			dies ist nur ein dummy\= für den Tabstopp \kill
-			First supervisor: \> Prof. Dr.-Ing Michael Hübner \\
-			Second supervisor: \> M. Sc. Keyvan Shahin
+			First Supervisor: \> Prof. Dr.-Ing Michael Hübner \\
+			Second Supervisor: \> M. Sc. Keyvan Shahin
 		\end{tabbing}
 		
 	\end{center}
