--- a/abstract.tex
+++ b/abstract.tex
@@ -3,3 +3,4 @@
 % !TeX encoding = utf8
 
 \chapter{Abstract}
+LDPC codes are currently widely used in wireless communication to great success. However in storage technology these are only used in limited areas. As LDPC codes can scale to large frame sized they can be adopted to work with flash memory. This master thesis consists an introduction into LDPC codes to familiarize the reader with the required concepts. Then a explanation of flash memory and some channel models that are used to represent the flash memory in tests. The main part is my implementation of an encoder and a decoder specifically adapted to quasi cyclic LDPC codes.
