--- a/main.tex
+++ b/main.tex
@@ -13,29 +13,28 @@
 
 \graphicspath{{image/}}
 \begin{document}
-	%\include{TitlePage}
+	\include{TitlePage}
 	
-	%\include{eidsstatliche}
-	%\include{abstract}
+	\include{eidsstatliche}
+	\include{abstract}
 	
 	\tableofcontents
 	\listoffigures
 	\listoftables
 	
 	
-	%\include{motivation}
+	\include{motivation}
 	
-	%\include{basics_ldpc}
-	%\include{basics_flash}
-	%\include{basics_channel}
+	\include{basics_ldpc}
+	\include{basics_flash}
+	\include{basics_channel}
 	
 
 	
-	%\include{approach}
+	\include{approach}
 	
 	\include{implementation}
 	
-	\include{results}
 
 	
 	\appendix
