--- a/appendix.tex
+++ b/appendix.tex
@@ -3,5 +3,63 @@
 % !TeX encoding = utf8
 
 \chapter{Appendix}
-
-\todo{attach my files as a zip or something like that}
+\section{LDPC Coder}
+\setcounter{MaxMatrixCols}{200}
+Wifi 802.11n LDPC FEC Matrix with block size 684 and rate $0.5$:
+\begin{equation}
+    B^T = \left[\begin{matrix}
+         0 & 22 &  6 &  2 & 23 & 24 & 25 & 13 &  7 & 11 & 25 &  3 \\
+        -1 &  0 & -1 & -1 & -1 & -1 & -1 & 24 & 20 & -1 & -1 & -1 \\
+        -1 & -1 &  0 & -1 & -1 & 23 & -1 & -1 & -1 & -1 &  8 & -1 \\
+        -1 & -1 & -1 &  0 & -1 &  1 & -1 & -1 & 16 & -1 & -1 & -1 \\
+         0 & 17 & 10 & 20 &  3 & 17 &  8 &  0 & 22 & 19 & 23 & 16 \\
+         0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & 10 & -1 & 18 & -1 \\
+        -1 &  0 & -1 & -1 & -1 &  3 & -1 &  8 & -1 & -1 & -1 & -1 \\
+        -1 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & 14 &  2 \\
+         0 & 12 & 24 & 25 &  0 & 10 &  7 &  6 & 23 & 13 &  9 & 25 \\
+        -1 & -1 & -1 &  0 & -1 & -1 & 18 & -1 & -1 & -1 & -1 &  5 \\
+        -1 & -1 &  0 & -1 &  9 & -1 & -1 & -1 & -1 &  3 & -1 & -1 \\
+         0 & -1 & -1 & -1 & 11 & -1 & -1 & -1 & -1 & 17 & -1 & -1 \\
+         1 & -1 & -1 & -1 & -1 & -1 &  0 & -1 & -1 & -1 & -1 &  1 \\
+         0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0
+    \end{matrix}\right]
+\end{equation}
+Wifi 802.11n LDPC FEC Matrix with block size 1944 and rate $0.5$:
+\begin{equation}
+    B^T = \left[\begin{matrix}
+        57 &  3 & 30 & 62 & 40 &  0 & 69 & 65 & 64 & -1 &  2 & 24 \\
+        -1 & -1 & -1 & 53 & -1 & -1 & 79 & -1 & -1 & 45 & 56 & -1 \\
+        -1 & 28 & -1 & -1 & -1 & -1 & 79 & -1 & -1 & -1 & -1 & 61 \\
+        -1 & -1 & -1 & -1 & 20 & -1 & -1 & -1 & -1 & 70 & 57 & -1 \\
+        50 &  0 & 24 & 53 & 66 &  8 & -1 & 38 & 14 &  0 & 35 & 60 \\
+        -1 & -1 & 37 & -1 & -1 & -1 & -1 & 57 & 52 & -1 & -1 & -1 \\
+        11 & -1 & -1 & -1 & -1 & 42 & 56 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 &  3 & 22 & -1 & -1 & -1 & -1 & -1 & -1 & 27 \\
+        50 & 55 & 56 & 35 & 28 & 50 & 52 & 72 & 30 & 77 & -1 & 51 \\
+        -1 &  7 & 14 & -1 & -1 & -1 & -1 & -1 & -1 &  9 & -1 & -1 \\
+        79 & -1 & -1 & -1 & -1 & -1 & -1 & 27 & -1 & -1 & 12 & -1 \\
+        -1 & -1 & -1 & -1 & -1 &  8 & -1 & -1 & 32 & -1 & -1 & 16 \\
+         1 & -1 & -1 & -1 & -1 & -1 &  0 & -1 & -1 & -1 & -1 &  1 \\
+         0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0 & -1 \\
+        -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 & -1 &  0 &  0
+    \end{matrix}\right]
+\end{equation}
