--- a/approach.tex
+++ b/approach.tex
@@ -5,7 +5,7 @@
 \chapter{Approach} \label{chap_approach}
 \section{Algorithms}
 \subsection{Min Sum Decoding}
-My architecture is somewhat based on  Yanhuan Liu, Chun Zhang, Pengcheng Song, and Hanjun Jiang\cite{LiZh17} paper. Although I change the stored values. For a message parsing LDPC decoder the straightforward implementation is to store the messages sent between the check and parity nodes. This results in needing to store multiple values per row of the parity check matrix. For example the LDPC code used for 802.11n with block length 1926 \todo{find nice source for 802.11n codes}and rate 0.5 has row weights of 7 and 8. This requires to store 8 messages per row of the parity check matrix. The approach I chose is only suited to the min-sum algorithm and will result in a reduction of storage requirements. Instead of splitting the iteration at the message step it is in this case preferable to split at the minimum and the sum for the variable node calculation.
+My architecture is somewhat based on  Yanhuan Liu, Chun Zhang, Pengcheng Song, and Hanjun Jiang\cite{LiZh17} paper. Although I change the stored values. For a message parsing LDPC decoder the straightforward implementation is to store the messages sent between the check and parity nodes. This results in needing to store multiple values per row of the parity check matrix. For example the LDPC code used for 802.11n with block length 1926 and rate 0.5 has row weights of 7 and 8. This requires to store 8 messages per row of the parity check matrix. The approach I chose is only suited to the min-sum algorithm and will result in a reduction of storage requirements. Instead of splitting the iteration at the message step it is in this case preferable to split at the minimum and the sum for the variable node calculation.
 
 For decoding the are two message types. The message from the variable nodes to the check nodes $q_{nm}$ and the message going the other way $r_{nm}$. Decoding is done in different steps\cite{EmEl14}:
 
@@ -176,5 +176,3 @@ The variable node values have to be rearranged depending on the current submatri
     \label{rot_iden_same}
 \end{figure}
 
-
-\todo{explain roll mess and how to map QC to FPGA}
