--- a/implementation.tex
+++ b/implementation.tex
@@ -15,7 +15,6 @@ The encoder is implemented in 2 different functions. One for the preprocessing w
 I wrote the decoder to represent the way I planned the FPGA implementation. So the overall structure is doing the steps that the VHDL implementation will also do. I designed it in a way that the python functions that are the core of the decoder roughly map to the VHDL entities. 
 
 \subsubsection{Hardware Overview}
-\todo{WTF is this ordering???}
 I chose to reduce the hardware complexity by splitting both the check node and the variable node step each into a global calculation and a local one. The global check node calculates \cref{cn_min,cn_min2,cn_min_id,cn_sign} and the local computes \cref{cn_loc}. The same goes for the variable node where the sum over all inputs as in \cref{vn_sum} and then for the local part the input is subtracted \cref{vn_loc}.
 
 \begin{figure}
@@ -78,7 +77,8 @@ The basic min sum algorithm serves as a baseline for the upcoming improvements. 
 
 \cref{min_sum_base} shows performance of the basic min sum decoder. Here the waterfall region of the LDPC decoder is visible. I was not able to gather performance data for lower error rates because the software implementation is not optimized for speed.
 
-\subsubsection{Normalized Min-sum}
+\subsubsection{Normalized Min Sum}
+When employing the normalized min sum algorithm the performance is improved compared with the min sum algorithm. To achieve best performance it is required to search for an optimal normalization factor. \cref{min_sum_norm_opt} shows the dependency of the error performance on the normalization factor.
 
 \begin{figure}
     \begin{tikzpicture}
@@ -96,11 +96,49 @@ The basic min sum algorithm serves as a baseline for the upcoming improvements. 
     \caption{Bit Error Rates of the Normalized Min Sum Algorithm for Different Normalization Factors}
 \end{figure}
 
+\subsection{Offset Min Sum}
+With the offset min sum algorithm there is a large boost in error correction performance. \cref{min_sum_offset_opt} displays the optimization flow for the offset. Even a very small offset if enough to boost the performance considerably. When the offset os to big information is lost as the offset saturates at 0. By selecting the offset carefully optimal performance is achieved.
+\begin{figure}
+    \begin{tikzpicture}
+        \begin{semilogyaxis}[width=11cm, xlabel={$E_b / N_0$} in dB, ylabel={Error Rate}, legend pos=south west]
+            \pgfplotstableread{data/sw_offset_params.dat}\paramopt
+            \foreach \x in {1,...,7} {
+                \addplot table [col sep=tab,x index={0}, y index={\x}] {\paramopt};
+                \pgfplotstablegetcolumnnamebyindex{\x}\of{\paramopt}\to{\colname}
+                \addlegendentryexpanded{Offset \colname}
+            }
+        \end{semilogyaxis}
+    \end{tikzpicture}
+    \centering
+    \label{min_sum_offset_opt}
+    \caption{Bit Error Rates of the Offset Min Sum Algorithm for Different Offsets}
+\end{figure}
 
-\subsubsection{Adaptive Normalized Min-sum}
-I was not able to improve the performance of the system by using the adaptive normalized min sum algorithm. The performance was on par with the normalized min sum and almost independent of the suppression parameter. 
-
-optimization with more dimensions?
+\subsection{Comparison}
+\begin{figure}
+    \begin{tikzpicture}
+        \begin{semilogyaxis}[width=11cm, xlabel={$E_b / N_0$} in dB, ylabel={Error Rate}, legend pos=south west]
+            \pgfplotstableread{data/sw_offset_params.dat}\paramoptos
+            \pgfplotstableread{data/sw_norm_params.dat}\paramopt
+            \foreach \x in {6} {
+                \addplot table [col sep=tab,x index={0}, y index={\x}] {\paramoptos};
+                \pgfplotstablegetcolumnnamebyindex{\x}\of{\paramoptos}\to{\colname}
+                \addlegendentryexpanded{Offset \colname}
+            }
+            \foreach \x in {8} {
+                \addplot table [col sep=tab,x index={0}, y index={\x}] {\paramopt};
+                \pgfplotstablegetcolumnnamebyindex{\x}\of{\paramopt}\to{\colname}
+                \addlegendentryexpanded{Normalization \colname}
+            }
+            \addplot table [col sep=tab,x={{Eb/N0 in dB}}, y={FER 648}] {data/sw_err_simple.dat};
+            \addlegendentry{FER 648}
+        \end{semilogyaxis}
+    \end{tikzpicture}
+    \centering
+    \label{min_sum_all_comp}
+    \caption{Bit Error Rates of the Different Min Sum Algorithms}
+\end{figure}
+Comparing the different variants of the min sum algorithm shows the offset min sum has the performance advantage. I was not able to test the adaptive variants of both algorithm due to time constraints. Especially at low bit error rates simulation takes considerable time as here I have to do more iterations to archive good confidence in the values.
 
 \section{Hardware}
 For the hardware implementation an FPGA from Xilinx is used. The device is a "ZYNQ™-7000 SOC XC7Z020-CLG484-1". It in a system on a chip consisting of a dual core ARM processor and programmable logic. The decoder is completely implemented in the FPGA logic and the encoder is software running on the ARM cores. I wrote VHDL code for the encoder.
@@ -111,10 +149,54 @@ The parameters for the hardware code were generate using Python scripts.
 The VHDL implementation for the encoder does the sparse matrix multiplications as fully parallel hardware. All bits are computed in parallel and no intermediate register stages are used as the encoder implemented in this way is faster than required for the decoder anyways. The sparse back substitution of $x^T = \bm{T}y^T$ is done recursively exploiting the advantages of a lower triangular matrix. Any calculation for an output only depends on the inputs and the previously calculated bits. The VHDL code is generated using Python scripts where splitting of the input matrix and the other precomputations are done with the help of numpy. I wrote a simple framework to generate the VHDL code for the matrix multiplications and back substitutions from the precomputed numpy matrices. 
 
 \subsection{Decoder}
-\todo{make some block diagramm of all my vhdl entities and their connections}
-The decoder is implemented using the algorithm descibed in \cref{chap_approach}. This sections discusses how the algorithm is mapped to a hardware platform. As there are parameters that have to be optimized in oder to get decent decoding performance the decoder is designed in such a way that it is easy to change parameters as for example the bit width of the stored values or the used parity check matrix. 
+The decoder is implemented using the algorithma described in \cref{chap_approach}. This sections discusses how the algorithm is mapped to a hardware platform. As there are parameters that have to be optimized in oder to get decent decoding performance the decoder is designed in such a way that it is easy to change parameters as for example the bit width of the stored values or the used parity check matrix. 
 
-Overall the decoder is written in VHDL but on file containing definitions for all signals and the decoder state machine is autogenerated with a python script. In this script it is possible to change the bitwidth of the LLRs and the parity check matrix.
+Overall the decoder is written in VHDL but on file containing definitions for all signals and the decoder state machine is autogenerated with a python script. In this script it is possible to change the bit width of the LLRs and the parity check matrix.
+
+\begin{figure}
+    \begin{tikzpicture}[
+        elem/.style={draw,rectangle,node distance=0.7cm,align=center,minimum width=1.5cm, minimum height=1cm},
+        circ/.style={draw,circle,node distance=1cm,align=center,minimum width=1.5cm, minimum height=1cm},
+        branch/.style={fill,shape=circle,minimum size=3pt,inner sep=0pt}]
+        \node (llr) [elem] {llr\\memory};
+        \node (res) [elem,below=of llr] {result\\memory};
+        \node (sig) [elem,below=of res] {signs\\memory};
+        \node (cnm) [elem,below=of sig] {cn\\memory};
+        \node (vnm) [elem,below=of cnm] {vn\\memory};
+        \node (vna) [elem,right=of vnm] {cn global\\accu};
+        \node (vng) [elem,below=of vna] {cn\\global};
+        \node (cna) [elem,right=of vna] {vn global\\accu};
+        \node (cng) [elem,below=of cna] {vn\\global};
+        \node (cnl) [elem,right=of cna] {cn\\local};
+        \node (att) [elem,below=of cnl] {attach\\signs};
+        \node (rol) [elem,right=of cnl] {roll};
+        \node (vnl) [elem,above=of rol] {vn\\local};
+        \node (mim) [elem,above=of vnl] {min\\mangle};
+        \node (mea) [elem,above=of mim] {message\\accu};
+        \node (fsm) [elem,above=of mea] {fsm};
+        \node (tmp) [elem,right=of res,opacity=0.0] {};
+        \node (dec) [elem,right=of tmp] {decoder};
+        \draw (llr) -- (dec);
+        \draw (res) -- (dec);
+        \draw (sig) -- (dec);
+        \draw (cnm) -- (dec);
+        \draw (vnm) -- (dec);
+        \draw (vna) -- (dec);
+        \draw (vng) -- (vna);
+        \draw (cna) -- (dec);
+        \draw (cng) -- (cna);
+        \draw (cnl) -- (dec);
+        \draw (att) -- (cnl);
+        \draw (rol) -- (dec);
+        \draw (vnl) -- (dec);
+        \draw (mim) -- (dec);
+        \draw (mea) -- (dec);
+        \draw (fsm) -- (dec);
+    \end{tikzpicture}
+    \centering
+    \caption{Block Diagram of the Enities in the Decoder}
+    \label{dec_tree}
+\end{figure}
 
 The decoder is controlled by a state machine which reads the "instruction list" and outputs the control signal and the memory read and write addresses. This instruction list is also created by the decoder python script. There it is also possible to change the clock cycle in which each signal appears. This makes it easy to change the pipelining. \cref{datafl_tree} shows how the message LLR values are passed along the entities. Each iteration of the decoder is split into two parts. The first part calculated the global check nodes results and the second part the global variable node results.
 
@@ -267,24 +349,24 @@ In \cref{roll_usage} you can see that for the block length of 200 it is not feas
 I used AXI-Stream interfaces to input the LLR values into the decoder and to output the decoded bits. These interfaces transfer the bits tightly packed to maximize throughput. The stream interface is a good fit for this application as decoding is done on full frames and the is no need to change single words after a transfer. Also it is fast to implement.
 
 \subsection{Pipelining}
-If implemented without any pipeline steps the maximum clock for the 648 bits message length, rate $0.5$, and 7 bit LLR is ~27Mhz\todo{check real val}. By adding registers between some steps I reduce the critical path. By adding two stages I increase the maximum clock rate to ~70Mhz\todo{test}. The pipeline stages are added between the local check node and the first barrel roll and after the second barrel roll. These position were determined by check the critical path timing in Vivado and adding registers to achieve a maximum critical path length of 10ns as to get a 100Mhz clock. \todo{i prolly need one after the global check node to get the memory timing better}
+If implemented without any pipeline steps the maximum clock for the 648 bits message length, rate $0.5$, and 7 bit LLR is \SI{30}{\mega\hertz}. By adding registers between some steps I reduce the critical path. By adding two stages I increase the maximum clock rate to \SI{45}{\mega\hertz}\todo{test}. The pipeline stages are added between the local check node and the first barrel roll and after the second barrel roll. These position were determined by check the critical path timing in Vivado and adding registers to achieve a maximum critical path length of \SI{10}{\nano\second} as to get a \SI{50}{\mega\hertz} clock. \todo{i prolly need one after the global check node to get the memory timing better}
 
 \subsection{Data Source}
-For evaluating the whole pipeline a source of data to be encoded is required. I used a uniform random number generator. The numbers were generated using a Tausworthe generator\cite{Ec96}. I implemented it in a straightforward manner in VHDL. There were no difficulties as it consists of static shifts and bit boolean operators.
+For evaluating the whole pipeline a source of data to be encoded is required. I used a uniform random number generator. The numbers were generated using a Tausworthe generator\cite{Ec96}. I implemented it in a straightforward manner in VHDL. There were no difficulties as it consists of static shifts and bit boolean operators. These operations are very fast in case of the boolean operations and have almost no cost in case of the shifts. No pipelining was required to meet the performance of the remaining system.
 
 \subsection{Channel Model}
 To test an error correction scheme a source of errors is required. This would usually be the flash memory in an solid state drive, but here I simulate it using gaussian noise. The gaussian noise is generated with the Box-Muller method using the hardware approach from Dong-U Lee, John D. Villasenor and Wayne Luk and Philip H. W. Leong\cite{LeVi06}. Here I used Vivado HLS to create the hardware. The Box-Muller method requires fixed point numbers and with high level synthesis it is very fast to write the code for such a noise generator.
 
-My tests concluded the Box Muller method is to hardware intensive when build with high level synthesis. I used a very efficient design by David B. Thomas\cite{Th14} which uses less resources of the FPGA. The class of gaussian number generators described in Thomas paper have different qualities depending on the internal bitwidths. I chose the one with the highest quality as it is still smaller than my Box-Muller implementation. To interface with my existing design I wrote an axi stream frontend to simply replace the other number generator. The Box-Muller method used for example 6845 LUTs compared to ~683 LUTs for this method. The output from the generator is a 26 bit fixed point number with 6 bit integer part.
+My tests concluded the Box Muller method is to hardware intensive when build with high level synthesis. I changed to a very efficient design by David B. Thomas\cite{Th14} which uses less resources of the FPGA. The class of gaussian number generators described in Thomas paper have different qualities depending on the internal bit widths. I chose the one with the highest quality as it is still smaller than my Box-Muller implementation. To interface with my existing design I wrote an axi stream frontend to simply replace the other number generator. The Box-Muller method used for example 6845 LUTs compared to ~683 LUTs for this method. The output from the generator is a 26 bit fixed point number with 6 bit integer part.
 
 \subsection{LLR Conversion}
-The LLR calculation is done as descibed in \cref{llr_approach}. The hardware block for the LLR takes $y_i$ and $\frac{2}{\sigma^2}$ is precomputed on the ARM core and then sent as a 32 bit fixed point number with 5 bit integer part to the programmable system. The output of the channel is of bit width to that no rounding or overflow can occur. The result of this conversion is then rounded to the number of bits the encoder is using.
+The LLR calculation is done as described in \cref{llr_approach}. The hardware block for the LLR takes $y_i$ and $\frac{2}{\sigma^2}$ is precomputed on the ARM core and then sent as a 32 bit fixed point number with 5 bit integer part to the programmable system. The output of the channel is of bit width to that no rounding or overflow can occur. The result of this conversion is then rounded to the number of bits the encoder is using.
 
 \subsection{Result Accumulation}
 The results of each decoding are compared to the input to the channel. As the output of the decoder is a 32 bit axi stream multiple word have to be compared for each decoding. The Hamming distance between the expected and decoded codeword is summed over all the words within one frame and then sent to ARM core.
 
 \subsection{Control}
-The whole system is controlled by the ARM core of the SoC. The parameters of the test system are set first by the ARM and then the encoder decoder core is set to run. While it is running the bit error counts of each transmission are read out and summed. As each frame is handled separately by the result accumulator a frame error can be detected easily by checking if the bit error count for a frame differs from zero. This split in functionality simplifies testing for different parameters enormously because new software for the cpu can be written and compiled very quickly compared to synthesizing VHDL code for the FPGA part.
+The whole system is controlled by the ARM core of the SoC. I programmed the ARM core bare metal without an operating system. This is simpler to set up and I do not require any advanced features of an operating system. The parameters of the test system are set first by the ARM and then the encoder decoder core is set to run. While it is running the bit error counts of each transmission are read out and summed. As each frame is handled separately by the result accumulator a frame error can be detected easily by checking if the bit error count for a frame differs from zero. This split in functionality simplifies testing for different parameters enormously because new software for the cpu can be written and compiled very quickly compared to synthesizing VHDL code for the FPGA part.
 
 
 \subsection{Results}
@@ -295,7 +377,6 @@ The complete system was implemented on a ZedBoard with the ARM cpu controlling t
         Slice LUTs & 34387 (64.64\%) & 16537 (31.08\%) & 8706 (16.36\%) & 1411 (2.65\%) \\ \midrule
         Block RAM & 32 (22.86\%) &  15.5 (11.07\%) & 13.5 (9.64\%) & 2 (1.43\%) \\ \midrule
         DSP & 32 (14.55\%) & 16 (7.27\%) & 0 & 8 (3.64\%) \\ \bottomrule
-        %Troughput & number? & number & - & - maybe add troughput but it aint so easy to measure so im not shure if can do it in time
     \end{tabularx}
     \centering
     \caption{Overall Hardware Usage of the Test System Post Implementation}
@@ -319,10 +400,11 @@ To achieve optimal performance of the decoder the input parameters have to be op
     \label{hw_opt_coarse}
 \end{figure}
 From \cref{hw_opt_coarse} I deduce that the scaling factor should be small so to optimize it further I swept a smaller range with more values. Even though \cref{hw_opt_coarse} only shows values up to 9 the sweep continues up to the maximum input but there is no other optimum in the error performance. So the smaller range results in \cref{hw_opt_fine} show the optimal value being 0.75 for this system. So in the further analysis this is the value I used as the scaling factor.
+\pgfplotstableread[col sep=tab]{data/hw_opt_bit_val_fine.dat}\hwoptbitbal
 \begin{figure}
     \begin{tikzpicture}
 		\begin{semilogyaxis}[width=14cm,height=10cm,xlabel={$E_b / N_0$} in dB, ylabel={Error Rate}, legend pos=south west]
-			\pgfplotstableread[col sep=tab]{data/hw_opt_bit_val_fine.dat}\hwoptbitbal
+			
 			\foreach \x in {1,...,10} {
 				\addgraph{\hwoptbitbal}{\x};
 			}
@@ -332,10 +414,26 @@ From \cref{hw_opt_coarse} I deduce that the scaling factor should be small so to
     \caption{Sweeping the Input Scaling Factor with 802.11 LDPC code 648 Bit block length and rate 0.5}
     \label{hw_opt_fine}
 \end{figure}
-As 
+From these graphs I already see a problem with the decoder. Especially looking at \cref{hw_opt_fine} there is a kink in the graph at an SNR of 2. But the error rate should here be in the waterfall region and decreasing veri rapidly. This is not the case with my design. I think this is due to saturation in the decoder. Also the very strong dependency on the input scaling factor leads me to believe this.
+\begin{figure}
+    \begin{tikzpicture}
+        \begin{semilogyaxis}[width=11cm,height=\axisdefaultheight+0.5cm,xlabel={$E_b / N_0$} in dB, ylabel={Error Rate}, legend pos=south west]
+            \pgfplotstableread[col sep=tab]{data/hw_opt_norm.dat}\hwoptnorm
+%             %\addgraph{\basesim}{7}
+            \addgraph{\hwoptnorm}{1}
+            \foreach \x in {5,...,8} {
+                \addgraph{\hwoptnorm}{\x};
+            }
+        \end{semilogyaxis}
+    \end{tikzpicture}
+    \centering
+    \caption{Sweeps to Optimize the Normalization Factor}
+    \label{hw_opt_norm}
+\end{figure}
+In \cref{hw_opt_norm} the improvement that the normalization brings is quite visible. At SNR values above 2 it is shadowed by the error floor problem that also persists in this test.
 
 \subsection{Possible Improvements}
-More pipelining
-In and output double buffering
-More pipeline stages
-u no dependency optimization
+To improve the overall decoder performance more pipelining could be employed to achieve higher clock rates. As data dependencies can only happen between iterations and the two iteration substeps the amount of clock cycles the decoder has to wait on data dependencies should be low. Therefore I imagine a deeper pipeline would improve the throughput of the decoder. Another option is to double buffer the incoming and outgoing data. This makes it possible to decode while the next frame is stored in memory and the previous one is still being read out. This leads to higher memory usage as the input and output buffer need double the size to accommodate two frames. From a logic perspective the impact should be quite low as splitting the memory in half can be done by setting a single address bit depending on the part in use.
+
+It may be desirable to change the code that is used on the fly. This is an enticing concept as it would allow an flash memory controller to adapt dynamically to the condition of the flash memory. This could extend the lifetime of an SSD as blocks with slightly to bad error performance would not be completely unuset but have a code with more parity bits and allow more errors to be corrected.
+
